2005-01-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* uniquify.el (uniquify-rationalize-file-buffer-names):
	Re-add an interactive spec.

	* isearch.el (isearch-dehighlight): Remove unused arg `totally'.
	(isearch-update, isearch-done): Adjust calls accordingly.

2005-01-05  Richard M. Stallman  <rms@gnu.org>

	* emacs-lisp/find-func.el (find-variable)
	(find-variable-other-window, find-variable-other-frame):
	Fix the TYPE args to find-function-read and find-function-do-it.
	(find-function): Doc fix.
	(find-function-at-point): Replace function-at-point alias.

2005-01-04  Richard M. Stallman  <rms@gnu.org>

	* cus-face.el (custom-declare-face):
	Record defface in current-load-list.

	* help-fns.el (variable-at-point): New arg ANY-SYMBOL.

	* emacs-lisp/find-func.el: Doc fixes.
	(find-face-regexp): New variable.
	(find-function-regexp-alist): New variable.
	(find-function-C-source): Third arg is now TYPE.
	(find-function-search-for-symbol): Handle general TYPE.
	(find-function-read, find-function-do-it): Handle general TYPE.
	(find-definition-noselect, find-face): New functions.
	(function-at-point): Alias deleted.

2005-01-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* battery.el (display-battery-mode): Rename from display-battery.
	Handle the case where it gets turned off.

2005-01-04  Richard M. Stallman  <rms@gnu.org>

	* cus-edit.el (customize): Make :link point to user doc.

	* man.el (Man-fontify-manpage): Turn off undo generation.

	* add-log.el (change-log-font-lock-keywords): Don't match just "From".

2005-01-04  Andreas Schwab  <schwab@suse.de>

	* files.el (insert-directory): Only look for error lines in
	inserted text.  Don't move too far after processing --dired markers.

2005-01-04  Richard M. Stallman  <rms@gnu.org>

	* mail/mailabbrev.el (sendmail-pre-abbrev-expand-hook):
	Don't expand if the character is @, period, dash, etc.
	(define-mail-abbrev): Quote names that contain problem characters.

2005-01-04  Thien-Thi Nguyen  <ttn@gnu.org>
